--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,6 @@ h2{font-family:'Source Code Pro', monospace; font-weight: 400;font-size:max(1.25
 
 .main-wrap{
   width:100%;
-  height:55vh;
   margin-top:3rem;
   display: flex;
   justify-content: center;
@@ -72,9 +71,17 @@ h2{font-family:'Source Code Pro', monospace; font-weight: 400;font-size:max(1.25
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-bottom:8rem;
   box-sizing: border-box;
 }
+
+.projects-wrap-title-box{
+  width:100%;
+}
+.projects-wrap-title-box h2{
+  text-align:start;
+}
+
+
 .projects-subwrap{
   width:min(576px, 40%);
 }
@@ -191,10 +198,39 @@ html {
   opacity:1;
 }
 
+
+/** 6-1-21 **/
+.wrap {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.content {
+  padding: 5rem;
+  width:40%;
+}
+
+.intro-header{
+  width: 100%;
+  display:flex;
+  align-items:center;
+  justify-content: space-between;
+}
+
+.intro{
+  margin-bottom:4rem;
+}
+
 /**MEDIA QUERIES**/
 @media screen and (max-device-width: 480px) and (orientation: portrait){
   .main-wrap{
     height:auto;
+  }
+
+  .content {
+    padding: 1rem;
+    width:90%;
   }
   .intro-wrap{
     width:90%;
@@ -211,10 +247,7 @@ html {
   .console{
     padding:2rem 1rem;
   }
-  .projects-wrap{
-    padding:0 5vw;
-    margin-top:6rem;
-  }
+
   .project-card{
     height:auto;
   }
@@ -235,4 +268,13 @@ html {
     width:100%;
     height:12em;
   }
+  .nav .icon {
+    color:#212121;
+    width:32px; 
+    height:32px;
+    margin-right:8px;
+    margin-left:0;
+  }
+
+
 }
